tests/baselines/reference/parserMemberAccessorDeclaration4(strict=true).errors.txt
parserMemberAccessorDeclaration4.ts(2,7): error TS7032: Property 'a' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
parserMemberAccessorDeclaration4.ts(2,9): error TS7006: Parameter 'i' implicitly has an 'any' type.


==== parserMemberAccessorDeclaration4.ts (2 errors) ====
    class C {
      set a(i) { }
          ~
!!! error TS7032: Property 'a' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
            ~
!!! error TS7006: Parameter 'i' implicitly has an 'any' type.
    }